project/assets/css/main.css
@import url("https://use.typekit.net/uys7fye.css");

* {
	box-sizing: border-box;
}

html,
body {
	margin: 0;
	padding: 0;
}

body {
	min-height: 1280px;
	color: #3b3b3b;
    font-size: 24px;
    margin-bottom: 5em;
    overflow-x: hidden;
}

.container {
    display: grid;
    justify-content: center;
}

h1 span {
    font-family: ivymode, sans-serif;
    font-weight: 600;
    font-style: normal;
    font-size: 95px;
    display: block;
}

#align-right {
    text-align: right!important;
    margin: 0 auto;
    width: 12em;
}

h1, h2 {
    font-family: ivymode, sans-serif;
    font-weight: 400;
    font-style: normal;
    text-align: center;
}

p {
    text-align: center;
    width: 23.5em;
    margin: 0 auto;
    font-size: 19px;
    font-family: neuzeit-grotesk, sans-serif;
    font-weight: 300;
    font-style: normal;
    line-height: 1.6em;
}

section {
    margin: 3em 0 0em 0;
}

.title-page {
    margin: 15em 0 15em 0!important;
}

.mrg-btm {
    margin-bottom: 6em;
}

p.caption {
    font-weight: 500;
    margin-bottom: 2em;
}

.pagination {
    text-align: center;
    margin-bottom: 5em;
}

.dot {
    height: 10px;
    width: 10px;
    background-color: #3b3b3b;
    transform:rotate(45deg);
    display: inline-block;
    margin-right: .7em;
    cursor: pointer;
}

.dot.active {
    background-color: #2196F3;
}

.dot:hover {
    background-color: #2196F3;
    transition: all 0.5s ease-in-out;
    transform: scale(1.05) rotate(45deg);
}

figure {
    text-align: center;
    margin: 3em 0 0 0;
}

.as-pth-tt,
.ir-pth-tt {
    font-family: ivymode, sans-serif;
    font-style: normal;
    font-size: 19.5px;
    transition: all 0.3s ease-in-out;
}

.yAxis, .xAxis {
    display: none;
}

.msb {
    display: flex;
    justify-content: center;
    margin: 3em 0 3em 0;
}

.vh-wrapper {
    display: flex;
}

.img-wrap {
    height: 20em;
    position: absolute;
}

.vh-caption {
    display: flex;
    justify-content: flex-start;
    position: absolute;
    right: 16em;
}

#vh-yr {
    font-size: 25px;
    font-weight: 600;
    text-align: left;
    font-family: ivymode, sans-serif;
    display: block;
    margin-bottom: 1em;

}

.vh-caption p {
    width: 9em;
    text-align: left;
}

#single {
    width: 17em;
}

#x-section {
    width: 25em;
}

.show {
    display: block!important;
    opacity: 1;
}

.hide {
    display: none;
    opacity: 0;
}

#outline_1840 {
    position: relative;
    opacity: 1;
    z-index: 1;
    transform: scale(1.1);
    left: 28.2em;
    top: 0.4em;
    display: block;
    transition: opacity .75s ease-in-out;
}

#outline_1928 {
    position: relative;
    opacity: 0;
    z-index: 1;
    left: 28em;
    bottom: 16.5em;
    display: none;
    transition: scale .75s ease-in-out;

}

.scale-down {
    transform: scale(0.75);
    -ms-transform: scale(0.75);
    -webkit-transform: scale(0.75);

}

#outline_1940 {
    position: relative;
    opacity: 0;
    z-index: 1;
    left: 28em;
    bottom: 16.7em;
    display: none;
}

#outline_1962 {
    position: relative;
    opacity: 0;
    z-index: 1;
    left: 28em;
    bottom: 17em;
    display: none;
}

#outline_1971 {
    position: relative;
    opacity: 0;
    z-index: 1;
    left: 28em;
    bottom: 16.7em;
    display: none;
}

.boots {
    fill: #fff;
}

.bg {
    background-color: #e7f0f3;
    width: 100vw;
}

.pt {
    height: 12px;
    width: 12px;
    background-color: orange;
    transform: rotate(45deg);
    display: inline-block;
    border: 1.25px solid white;
    
}

.pt:hover {
    background-color: #2196F3;
    transition: all 0.5s ease-in-out;
    cursor: pointer;
    transform: scale(1.05) rotate(45deg);
}

.tooltip {
    display: inline-block;
}

.tooltip .tt-text {
    visibility: hidden;
    width: 11em;
    background-color: #ffffffe0;
    color: #000;
    text-align: left;
    padding: 14px;
    border-radius: 15px;
    transform: rotate(-45deg)!important;
    position: absolute;
    z-index: 1;
    font-family: neuzeit-grotesk, sans-serif;
    font-weight: 300;
    font-style: normal;
    font-size: 18px;
    top: 100%;
    left: 50%;
    margin-left: -40px;
    transition: opacity 0.5s;
    opacity: 0;
    line-height: 23px;
    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
}

.tt-text b {
    color:#2196F3;
    line-height: 30px;
}

#buckle {
    position: relative;
    top: 5.4em;
    left: 7.1em;
}

#buckle:hover .tt-text {
    visibility: visible;
    opacity: 1;
}


#shell {
    position: relative;
    top: 12em;
    left: 7.7em;
}


#shell:hover .tt-text {
    visibility: visible;
    opacity: 1;
    width: 10em!important;
}

#strap {
    position: relative;
    top: 3.1em;
    left: 5.7em;
}


#strap:hover .tt-text {
    visibility: visible;
    opacity: 1;
}

#liner {
    position: relative;
    left: 12em;
    top: 2em;
}

#liner:hover .tt-text {
    visibility: visible;
    opacity: 1;
}

#insole {
    position: relative;
    top: 13em;
    left: 9em;
}

#insole:hover .tt-text {
    visibility: visible;
    opacity: 1;
    width: 9em!important;
}

#toelip {
    position: relative;
    top: 16.8em;
    left: 20em;
}

#toelip:hover .tt-text {
    visibility: visible;
    opacity: 1;
    width: 9em!important;
}

#binding_b {
    position: relative;
    top: 14.5em;
    left: 7.2em;

}

#binding_b:hover .tt-text {
    visibility: visible;
    opacity: 1;
    width: 12em!important;
}

#binding_f {
    position: relative;
    top: 16.8em;
    left: 21.3em;

}

#binding_f:hover .tt-text {
    visibility: visible;
    opacity: 1;
    width: 12em!important;
}

span.highlight {
    font-weight: 500;
    color: #2196F3;
}

